--- a/src/components/scrolltab/scrolltab.less
+++ b/src/components/scrolltab/scrolltab.less
@@ -62,10 +62,8 @@
     &-title {
       font-size: .3rem;
       color: #5d6265;
-      overflow-x: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       max-width: 1.6rem;
+      .text-overflow-ellipsis();
     }
     &-content {
       height: 100%;
