'初步完善goodsItem组件'

--- a/src/components/base.less
+++ b/src/components/base.less
@@ -1,9 +1,9 @@
 @css-prefix: mj;
-
-.text-overflow-ellipsis () {
+.text-overflow-ellipsis {
   overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  word-wrap: break-word;
 }
 
 .top-line(@color, @line: solid, @zindex: 0) {
