--- a/src/components/scrolltab/scrolltab.less
+++ b/src/components/scrolltab/scrolltab.less
@@ -63,7 +63,7 @@
       font-size: .3rem;
       color: #5d6265;
       max-width: 1.6rem;
-      .text-overflow-ellipsis();
+      .text-overflow-ellipsis;
     }
     &-content {
       height: 100%;
