--- a/src/components/goodsItem/goodsItem.less
+++ b/src/components/goodsItem/goodsItem.less
@@ -1,16 +1,17 @@
 @import '../base.less';
 .goods-item {
   display: flex;
-  padding: .1rem .2rem;
+  padding: .1rem 0 .1rem .2rem;
   &-lside {
-    width: 1.4rem;
+    width: 1.6rem;
     img {
-      width: 1.4rem;
-      height: 1.4rem;
+      width: 1.6rem;
+      height: 1.6rem;
     }
   }
   &-rside {
     flex: 1;
+    overflow: hidden;
     text-align: left;
     padding-left: .2rem;
     &-title {
@@ -18,12 +19,46 @@
       line-height: .5rem;
       color: #555555;
       font-weight: normal;
-      .text-overflow-ellipsis();
+      width: 100%;
+      .text-overflow-ellipsis;
     }
     &-info {
       font-size: .24rem;
+      width: 100%;
       color: #8d8d8d;
+      line-height: .6rem;
+      .text-overflow-ellipsis;
     }
-    &-footer {}
+    &-control-box {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      .icon-box {
+        width: .5rem;
+        height: .5rem;
+        text-align: center;
+        border-radius: 50%;
+        background-color: #ff8657;
+        line-height: .5rem;
+      }
+      .count-box {
+        padding: 0 .2rem;
+        font-size: .28rem;
+        color: #000;
+      }
+      .reduce {
+        background-color: transparent;
+        border: 2px solid #ff8657;
+        i {
+          color: #ff8657;
+        }
+      }
+      i {
+        color: #fff;
+        font-size: .24rem;
+        position: relative;
+        top: -1px;
+      }
+    }
   }
 }
