--- a/src/pages/Shop/Shop.less
+++ b/src/pages/Shop/Shop.less
@@ -27,3 +27,79 @@
   width: 100%;
   position: relative;
 }
+
+.mall-info {
+  &-header {
+    display: flex;
+    padding: 0 .5rem;
+    margin-top: .4rem;
+    &-lside {
+      width: 1.6rem;
+      .logo {
+        width: 1.6rem;
+        height: 1.6rem;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 4px solid rgba(0, 0, 0, .1);
+      }
+    }
+    &-rside {
+      flex: 1;
+      overflow: hidden;
+      text-align: left;
+      padding: 0 0 0 .3rem;
+      .mall-name {
+        font-size: .36rem;
+        color: #fff;
+        font-weight: normal;
+        padding: .15rem 0 .1rem;
+        overflow-x: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        word-wrap: break-word;
+      }
+      .mall-desc {
+        font-size: .28rem;
+        color: #fff;
+        word-wrap: break-word;
+        line-height: .32rem;
+        height: .64rem;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
+        overflow-x: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
+  &-notice-wapper {
+    display: flex;
+    align-items: center;
+    padding: .3rem .5rem .1rem;
+    .notice-icon {
+      width: .6rem;
+      color: #fff;
+    }
+    h3 {
+      flex: 1;
+      padding: .1rem;
+      background-color: rgba(0, 0, 0, .2);
+      text-align: left;
+      border-radius: 4px;
+      color: #fff;
+      font-size: .24rem;
+      font-weight: normal;
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      word-wrap: break-word;
+    }
+    .more-icon {
+      color: #fff;
+      transform: rotateZ(90deg);
+      display: block;
+      padding: 0 .1rem;
+    }
+  }
+}
