店铺首页添加购物车模块

--- a/src/components/coupon/coupon.less
+++ b/src/components/coupon/coupon.less
@@ -10,7 +10,7 @@
     display: block;
     width: .4rem;
     height: .4rem;
-    background-color: #F6FBFF;
+    background-color: #fff;
     border: 2px solid @color;
     border-radius: 50%;
     position: absolute;
