购物车添加使用抛物线动画

--- a/src/pages/Shop/Shop.less
+++ b/src/pages/Shop/Shop.less
@@ -173,7 +173,7 @@
   .count {
     flex: 1;
     padding: 0 .2rem;
-    text-align:left;
+    text-align: left;
     font-size: .24rem;
     span {
       font-size: .32rem;
@@ -188,4 +188,17 @@
     color: #fff;
     background-color: #ff9057;
   }
+}
+
+//抛物线动画元素
+.parabola-point {
+  width: .4rem;
+  height: .4rem;
+  border-radius: 50%;
+  opacity: 0;
+  background-color: #ff8657;
+  position: fixed;
+  left: -100px;
+  top: -100px;
+  z-index: 100;
 }
