--- a/src/components/goodsItem/goodsItem.less
+++ b/src/components/goodsItem/goodsItem.less
@@ -33,6 +33,17 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      h4 {
+        font-size: .32rem;
+        text-align: left;
+        color: #ff6634;
+        flex: 1;
+        font-weight: normal;
+        font-family: Arial;
+        span {
+          font-size: .24rem;
+        }
+      }
       .icon-box {
         width: .5rem;
         height: .5rem;
