--- a/src/styles/animate.less
+++ b/src/styles/animate.less
@@ -1,6 +1,6 @@
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity .5s ease;
+  transition: opacity .6s ease-in-out;
 }
 
 .fade-enter,
