--- a/src/components/scrolltab/scrolltab.less
+++ b/src/components/scrolltab/scrolltab.less
@@ -70,7 +70,7 @@
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
       flex: 1;
-      padding: 0 .24rem .24rem 0;
+      padding: 0 .24rem 1.2rem 0;
       position: relative;
     }
     &-content-title {
