--- a/src/components/tab/tab.less
+++ b/src/components/tab/tab.less
@@ -28,6 +28,7 @@
       position: relative;
       z-index: 0;
       display: flex;
+      border-bottom: 2px solid #ededed;
       &:after {
         .bottom-line(@tab-bottom-border-color, 3);
       }
@@ -63,7 +64,7 @@
           height: 2px;
           position: absolute;
           left: 50%;
-          bottom: 0;
+          bottom: -2px;
           margin-left: -35%;
           z-index: 4;
           background-color: currentColor;
