--- a/src/pages/Shop/Shop.less
+++ b/src/pages/Shop/Shop.less
@@ -159,6 +159,47 @@
   opacity: 0;
 }
 
+.evaluate {
+  max-height: 100vh;
+  overflow-y: scroll;
+  &-header {
+    display: flex;
+    align-items: center;
+    border-bottom: .2rem solid #efefef;
+    padding:.3rem .1rem .4rem;
+    &-lside {
+      width: 2rem;
+      font-size: .24rem;
+      color: #333;
+      h3 {
+        font-weight: normal;
+        span {
+          font-size: .8rem;
+          display: block;
+          color: #faa500;
+        }
+      }
+    }
+    &-rside {
+      padding-top: .2rem;
+      .item {
+        display: flex;
+        align-items: center;
+        border-left: 1px solid #ccc;
+        .lable {
+          font-size: .28rem;
+          padding: 4px .2rem;
+        }
+        .score {
+          font-size: .32rem;
+          color: #ffaf00;
+          padding:0 .1rem;
+        }
+      }
+    }
+  }
+}
+
 // trolley
 .trolley {
   position: fixed;
