'添加商品详情模块'

--- a/src/pages/Shop/Shop.less
+++ b/src/pages/Shop/Shop.less
@@ -117,6 +117,11 @@
   }
 }
 
+.goods-detail {
+  position: fixed;
+  z-index: 9999;
+}
+
 // 优惠信息
 .benefit {
   text-align: left;
@@ -245,5 +250,5 @@
   position: fixed;
   left: -100px;
   top: -100px;
-  z-index: 100;
+  z-index: 99999;
 }
