'修改footerTrolley组件并添加购物车页面'

--- a/src/components/goodsDetail/goodsDetail.less
+++ b/src/components/goodsDetail/goodsDetail.less
@@ -34,14 +34,26 @@
   .goods-poster {
     max-width: 100%;
   }
+  h1 {
+    text-align: left;
+    font-size: .36rem;
+    color: #333;
+    padding: .2rem .2rem 0;
+    font-weight: normal;
+  }
   .title-box {
     display: flex;
     padding: .2rem;
     h2 {
       flex: 1;
       text-align: left;
-      font-size: .32rem;
+      font-size: .42rem;
       color: #333;
+      font-weight: normal;
+      color: #ff8657;
+      span {
+        font-size: .28rem;
+      }
     }
     .control-box {
       width: 2rem;
