'添加搜索功能模块'

--- a/src/pages/Shop/Shop.less
+++ b/src/pages/Shop/Shop.less
@@ -19,6 +19,10 @@
     padding: 0 .4rem;
     line-height: .6rem;
     text-align: left;
+    border: 0;
+    width: 100%;
+    outline: none;
+    font-family: 'Microsoft YaHei';
   }
 }
 
